📲 feat: post metadata retrieval & like comment endpoint (#108)
