# backend/src/entities/media/service.ts
@@ -121,16 +121,28 @@ export class MediaServiceImpl {
     createdAt,
     caption,
     media,
+    location,
+    comments,
+    likes,
+    isLiked,
+    profilePhoto,
   }: PostWithMedia): Promise<PostWithMediaURL> {
     const mediaWithUrls = await Promise.all(media.map(this.getMediaWithSignedUrl.bind(this)));
-    return {
+    const profilePhotoUrl = profilePhoto ? await this.getSignedUrl(profilePhoto) : null;
+    const result = {
       id,
       groupId,
+      location,
       userId,
+      comments,
+      likes,
+      isLiked,
       createdAt,
       caption,
+      profilePhoto: profilePhotoUrl,
       media: mediaWithUrls,
     };
+    return result;
   }
 
   private async getMediaWithSignedUrl({
