# backend/src/entities/users/transaction.ts
@@ -1,14 +1,16 @@
 import { PostgresJsDatabase } from "drizzle-orm/postgres-js";
 import {
+  commentsTable,
   devicesTable,
   groupsTable,
+  likesTable,
   mediaTable,
   membersTable,
   postsTable,
   usersTable,
 } from "../schema";
 import { and, eq, sql, not, exists } from "drizzle-orm";
-import { Media, PostWithMedia } from "../../types/api/internal/posts";
+import { PostWithMedia } from "../../types/api/internal/posts";
 import {
   CreateUserPayload,
   Pagination,
@@ -18,6 +20,7 @@ import {
   User,
 } from "../../types/api/internal/users";
 import { Group } from "../../types/api/internal/groups";
+import { getPostMetadata } from "../../utilities/query";
 
 export interface UserTransaction {
   insertUser(payload: CreateUserPayload): Promise<User | null>;
@@ -91,22 +94,11 @@ export class UserTransactionImpl implements UserTransaction {
 
   async getPosts({ id, limit, page }: Pagination): Promise<PostWithMedia[]> {
     return await this.db
-      .select({
-        id: postsTable.id,
-        userId: postsTable.userId,
-        groupId: postsTable.groupId,
-        createdAt: postsTable.createdAt,
-        caption: postsTable.caption,
-        media: sql<Media[]>`array_agg(
-          json_build_object(
-            'id', ${mediaTable.id},
-            'type', ${mediaTable.type},
-            'postId', ${mediaTable.postId},
-            'objectKey', ${mediaTable.objectKey}
-          )
-        )`,
-      })
+      .select(getPostMetadata(id))
       .from(postsTable)
+      .leftJoin(likesTable, eq(likesTable.postId, postsTable.id))
+      .leftJoin(commentsTable, eq(commentsTable.postId, postsTable.id))
+      .innerJoin(usersTable, eq(postsTable.userId, usersTable.id))
       .innerJoin(mediaTable, eq(mediaTable.postId, postsTable.id))
       .where(eq(postsTable.userId, id))
       .groupBy(
@@ -115,6 +107,8 @@ export class UserTransactionImpl implements UserTransaction {
         postsTable.groupId,
         postsTable.createdAt,
         postsTable.caption,
+        postsTable.location,
+        usersTable.profilePhoto,
       )
       .orderBy(postsTable.createdAt)
       .limit(limit)
